resolve conflicts after merging with master