@@ -29,6 +29,7 @@ import de.uni_passau.fim.se2.litterbox.ast.model.metadata.astlists.SoundMetadata
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class AstNodeUtil {
     private AstNodeUtil() {
@@ -48,7 +49,7 @@ public class AstNodeUtil {
                 .getDefinitions()
                 .stream()
                 .filter(actor -> includeStage || actor.isSprite())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
